precompiles/utils/macro/tests/precompile/compile-fail/handle/set-wrong-type.stderr
error: This parameter must have type `&mut impl PrecompileHandle`
  --> tests/precompile/compile-fail/handle/set-wrong-type.rs:24:38
   |
24 |     fn foo(_discriminant: u32, _handle: u32) {
   |                                         ^^^
